a few small changes

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <header class="bg-primary text-white">
      <div class="gradient"></div>
       <div class="container text-center">
-        <h1>beautiful wordpress theme </h1>
-        <h4 class="lead">for agencies and portfolios</h4>
+        <h1>Magnolia Gardens Home</h1>
+        <h4 class="lead">our three pronged approach to assisted living</h4>
         <div><a class="btn btn-primary" href="#" role="button">get started</a></div>
       </div>
 
@@ -107,7 +107,7 @@
     <section id="portfolios">
         <div class="container">
             <div class="text-center">
-                <button class="btn btn-success" role="button">want to work with us?</button>
+                <button class="btn btn-success" role="button">want to contact us?</button>
                 <h3>beautifully crafter theme</h3>
                 <h4>for agencies and portfolios</h4>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five</p>
@@ -197,7 +197,7 @@
 					    <div class="col-lg-7 col-sm-12" data-aos="fade-right" data-aos-duration="700">
 					    	 <div class="blog-column">
 					    		<h5><a href="blog_single.html">Sample Meal Planning</a></h5>
-					    		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. specimen book. It has survived not only five</p>
+					    		<p>Having healthy and nourishing food every day is important to our health and longevity, let us show you what we're cooking up!</p>
 					    		<a class="btn btn-primary" href="#" role="button">+ more</a>
 					    	</div>
 					    </div>
@@ -208,10 +208,10 @@
                         <div class="col-lg-12 col-sm-12" data-aos="fade-left" data-aos-duration="700">
                             <img src="images/blog-4.jpg" alt="" class="img-thumbnail blog-3">
                               <div class="text-block">
-                                <h4><a href="blog_single.html">Photography</a></h4>
+                                <h4><a href="blog_single.html">Engagement</a></h4>
                               </div>
                             <div class="text-block1">
-                             <p><a href="blog_single.html">Beautiful girl holding her camera in neck for a photo shoot</a></p>
+                             <p><a href="blog_single.html">Socialize and engage with our community.</a></p>
                              <div class="more">
                                  <a class="btn .btn-success" href="blog_single.html" role="button">+ more</a>
                              </div>
@@ -228,8 +228,8 @@
       <div class="container-fluid">
           <div class="text-center">
               <button class="btn btn-success" role="button">want to work with us?</button>
-              <h3>we write beautiful articles on design</h3>
-              <h4>read them all in our blog, and please share.</h4>
+              <h3>Here are a few posts</h3>
+              <h4>read them and please share.</h4>
           </div>
           <div class="row no-gutters">
            <div class="col-lg-3 col-sm-6" data-aos="fade-left" data-aos-delay="100">
@@ -283,9 +283,9 @@
     <div class="Subscribe">
        <div class="container">
               <div class="text-center">
-                  <button class="btn btn-success" role="button">want to work with us?</button>
+                  <button class="btn btn-success" role="button">would you like to contact us?</button>
                   <h3>We can't wait to hear from you, contact us!</h3>
-                  <h4>Feel free to share us with friends for whom you think we may be a good fit.</h4>
+                  <h4>Please share us with friends for whom you think we may be a good fit.</h4>
               </div>
            <div class="row">
                <div class="col-lg-6 col" data-aos="fade-right" data-aos-delay="200" data-aos-duration="700">
